added the content of the first recipe page:  bolognese.html

--- a/recipes/bolognese.html
+++ b/recipes/bolognese.html
@@ -7,6 +7,34 @@
     <title> Ragu Bolognese</title>
 </head>
 <body>
-    
+    <h1>Ragu Bolognese Recipe</h1>
+    <img src="https://www.allrecipes.com/thmb/I0dWXbiL_Z_tnQpS2aF3rglbZ2w=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/6334581-a30691969c5f4c49abc628bd0fae78f2.jpg" alt="image of Ragu Bolognese dish" width="400px"height="300px">
+    <h2>Description:</h2>
+    <p>Bolognese spaghetti or simply Bolognese is an italian dish made from spaghetti <br> 
+        with the meat-based bolognese sauce which gives its name to the dish.</p>
+    <h2>Ingredients:</h2>
+    <ul>
+        <li> a half-cup of extra virgin olive oil</li>
+        <li>a half-cup of butter</li>
+        <li>one cup of minced onion</li>
+        <li>a half-cup of minced celery</li>
+        <li>a quarter-cup of minced carrot</li>
+        <li>one pound of ground veal</li>
+        <li>one pound ground pork</li>
+        <li>a half-pound of ground beef</li>
+        <li>a quarter-cup of finely chopped pancetta bacon</li>
+        <li>a half-cup of milk</li>
+        <li>two cups of tomato sauce</li>
+        <li>two cups of beef broth</li>
+    </ul>
+    <h2>Steps:</h2>
+    <ol>
+        <li>Heat olive oil and butter in a large saucepan over medium heat.</li>
+        <li>Saute onion, celery and carrots until soft.</li>
+        <li>Add veal, pork, beef and pancetta, and cook until evenly brown, 15 to 20 minutes.</li>
+        <li>Pour in milk, and cook until liquid has evaporated, about 15 minutes.</li>
+        <li>tir in tomato sauce and beef broth.</li>
+        <li>Cover, and simmer 2 1/2 hours.</li>
+    </ol>
 </body>
 </html>
