I added the second recipe page and linked it to the index page

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <h1>Odin Recipes</h1>
     <a href="recipes/bolognese.html">Ragu Bolognese</a>
+    <a href="recipes/Egg-fried_rice.html">Egg-fried Rice</a>
 </body>
 </html>
