added the final recipe page (Biryani) and linked it to the index.html

--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/bolognese.html">Ragu Bolognese</a>
-    <a href="recipes/Egg-fried_rice.html">Egg-fried Rice</a>
+    <ul>
+        <li><a href="recipes/bolognese.html">Ragu Bolognese Recipe</a></li>
+        <li><a href="recipes/Egg-fried_rice.html">Egg-fried Rice Recipe</a></li>
+        <li><a href="recipes/byriani.html">Byriani Recipe</a></li>
+    </ul>
 </body>
 </html>
