--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>recipes index</title>
+    <link rel="stylesheet" href="./styles/styles.css">
 </head>
 <body>
-    <h1>Odin Recipes</h1>
+    <h1 class="index-h1">Odin Recipes</h1>
     <ul>
         <li><a href="recipes/bolognese.html">Ragu Bolognese Recipe</a></li>
         <li><a href="recipes/Egg-fried_rice.html">Egg-fried Rice Recipe</a></li>
