--- a/recipes/bolognese.html
+++ b/recipes/bolognese.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1 class="page-h1">Ragu Bolognese Recipe</h1>
-    <img src="https://www.allrecipes.com/thmb/I0dWXbiL_Z_tnQpS2aF3rglbZ2w=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/6334581-a30691969c5f4c49abc628bd0fae78f2.jpg" alt="image of Ragu Bolognese dish" width="400px"height="300px">
+    <img src="https://www.allrecipes.com/thmb/I0dWXbiL_Z_tnQpS2aF3rglbZ2w=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/6334581-a30691969c5f4c49abc628bd0fae78f2.jpg" alt="image of Ragu Bolognese dish">
     <h2>Description:</h2>
     <p>Bolognese spaghetti or simply Bolognese is an italian dish made from spaghetti 
         with the meat-based bolognese sauce which gives its name to the dish.</p>
